--- a/NoteBooks/Result - Separation.ipynb
+++ b/NoteBooks/Result - Separation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "4  ATGE       900  20.035755  0.502820  345.097181  438.814722  1.064037e+02"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "97      US-SERC  0.094402"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "76            SE-Svb  6.435816"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "49  INDONESIA  0.109921"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "63             KEN-1  6.212538"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,6 +459,510 @@
     "df_Vario_600_Sill.to_csv(cwd_Images_Results + \"\\\\Sill 600m.csv\", index = False)\n",
     "df_Vario_900_CV.to_csv(cwd_Images_Results + \"\\\\CV 900m.csv\", index = False)\n",
     "df_Vario_900_Sill.to_csv(cwd_Images_Results + \"\\\\Sill 900m.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Roman"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Site</th>\n",
+       "      <th>Internal Distance</th>\n",
+       "      <th>External Distance</th>\n",
+       "      <th>Rcv</th>\n",
+       "      <th>Rse</th>\n",
+       "      <th>Rst</th>\n",
+       "      <th>Rsv</th>\n",
+       "      <th>RAW Score</th>\n",
+       "      <th>ST Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ATGE</td>\n",
+       "      <td>30</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.862114</td>\n",
+       "      <td>0.784802</td>\n",
+       "      <td>0.990000</td>\n",
+       "      <td>5.965000</td>\n",
+       "      <td>0.579970</td>\n",
+       "      <td>0.294941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ATGE</td>\n",
+       "      <td>30</td>\n",
+       "      <td>600</td>\n",
+       "      <td>0.967468</td>\n",
+       "      <td>0.791442</td>\n",
+       "      <td>0.617123</td>\n",
+       "      <td>16.680712</td>\n",
+       "      <td>0.516813</td>\n",
+       "      <td>0.145351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ATGE</td>\n",
+       "      <td>30</td>\n",
+       "      <td>900</td>\n",
+       "      <td>0.958071</td>\n",
+       "      <td>0.791844</td>\n",
+       "      <td>0.492589</td>\n",
+       "      <td>25.011099</td>\n",
+       "      <td>0.521882</td>\n",
+       "      <td>0.104032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ATGE</td>\n",
+       "      <td>100</td>\n",
+       "      <td>300</td>\n",
+       "      <td>-0.102966</td>\n",
+       "      <td>0.923035</td>\n",
+       "      <td>-0.148640</td>\n",
+       "      <td>0.284701</td>\n",
+       "      <td>4.855959</td>\n",
+       "      <td>0.907602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ATGE</td>\n",
+       "      <td>100</td>\n",
+       "      <td>600</td>\n",
+       "      <td>0.056577</td>\n",
+       "      <td>0.932719</td>\n",
+       "      <td>-0.187375</td>\n",
+       "      <td>1.538509</td>\n",
+       "      <td>8.837468</td>\n",
+       "      <td>0.654933</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Site  Internal Distance  External Distance       Rcv       Rse       Rst  \\\n",
+       "0  ATGE                 30                100  0.862114  0.784802  0.990000   \n",
+       "1  ATGE                 30                600  0.967468  0.791442  0.617123   \n",
+       "2  ATGE                 30                900  0.958071  0.791844  0.492589   \n",
+       "3  ATGE                100                300 -0.102966  0.923035 -0.148640   \n",
+       "4  ATGE                100                600  0.056577  0.932719 -0.187375   \n",
+       "\n",
+       "         Rsv  RAW Score  ST Score  \n",
+       "0   5.965000   0.579970  0.294941  \n",
+       "1  16.680712   0.516813  0.145351  \n",
+       "2  25.011099   0.521882  0.104032  \n",
+       "3   0.284701   4.855959  0.907602  \n",
+       "4   1.538509   8.837468  0.654933  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_Roman = pd.read_csv(cwd_Images_Results + \"\\\\\" + \"Roman.csv\")\n",
+    "df_Roman.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 30-600 900"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_Roman_30_600 = df_Roman[(df_Roman[\"Internal Distance\"] == 30) & (df_Roman[\"External Distance\"] == 600)]\n",
+    "df_Roman_30_600_RAW = df_Roman_30_600[[\"Site\",\"Internal Distance\",\"External Distance\",\"RAW Score\"]].reset_index(drop = True).sort_values('RAW Score', ascending=False)\n",
+    "df_Roman_30_600_ST = df_Roman_30_600[[\"Site\",\"Internal Distance\",\"External Distance\",\"ST Score\"]].reset_index(drop = True).sort_values('ST Score', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_Roman_30_900 = df_Roman[(df_Roman[\"Internal Distance\"] == 30) & (df_Roman[\"External Distance\"] == 900)]\n",
+    "df_Roman_30_900_RAW = df_Roman_30_900[[\"Site\",\"Internal Distance\",\"External Distance\",\"RAW Score\"]].reset_index(drop = True).sort_values('RAW Score', ascending=False)\n",
+    "df_Roman_30_900_ST = df_Roman_30_900[[\"Site\",\"Internal Distance\",\"External Distance\",\"ST Score\"]].reset_index(drop = True).sort_values('ST Score', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 100-600 900"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_Roman_100_600 = df_Roman[(df_Roman[\"Internal Distance\"] == 100) & (df_Roman[\"External Distance\"] == 600)]\n",
+    "df_Roman_100_600_RAW = df_Roman_100_600[[\"Site\",\"Internal Distance\",\"External Distance\",\"RAW Score\"]].reset_index(drop = True).sort_values('RAW Score', ascending=False)\n",
+    "df_Roman_100_600_ST = df_Roman_100_600[[\"Site\",\"Internal Distance\",\"External Distance\",\"ST Score\"]].reset_index(drop = True).sort_values('ST Score', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_Roman_100_900 = df_Roman[(df_Roman[\"Internal Distance\"] == 100) & (df_Roman[\"External Distance\"] == 900)]\n",
+    "df_Roman_100_900_RAW = df_Roman_100_900[[\"Site\",\"Internal Distance\",\"External Distance\",\"RAW Score\"]].reset_index(drop = True).sort_values('RAW Score', ascending=False)\n",
+    "df_Roman_100_900_ST = df_Roman_100_900[[\"Site\",\"Internal Distance\",\"External Distance\",\"ST Score\"]].reset_index(drop = True).sort_values('ST Score', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Site</th>\n",
+       "      <th>Internal Distance</th>\n",
+       "      <th>External Distance</th>\n",
+       "      <th>RAW Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>FR-OHP</td>\n",
+       "      <td>30</td>\n",
+       "      <td>900</td>\n",
+       "      <td>39.387893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>SP-MAJ</td>\n",
+       "      <td>30</td>\n",
+       "      <td>900</td>\n",
+       "      <td>14.889555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>Tapajos KM67 Mature Forest site</td>\n",
+       "      <td>30</td>\n",
+       "      <td>900</td>\n",
+       "      <td>8.071101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>SE-Svb</td>\n",
+       "      <td>30</td>\n",
+       "      <td>900</td>\n",
+       "      <td>5.467443</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>FI-Hyy</td>\n",
+       "      <td>30</td>\n",
+       "      <td>900</td>\n",
+       "      <td>5.167612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>US-LIN</td>\n",
+       "      <td>30</td>\n",
+       "      <td>900</td>\n",
+       "      <td>0.022159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>CHINA-AGR 1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>900</td>\n",
+       "      <td>0.016297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>LOBE</td>\n",
+       "      <td>30</td>\n",
+       "      <td>900</td>\n",
+       "      <td>0.015034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BASP</td>\n",
+       "      <td>30</td>\n",
+       "      <td>900</td>\n",
+       "      <td>0.010219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>DE-Geb New</td>\n",
+       "      <td>30</td>\n",
+       "      <td>900</td>\n",
+       "      <td>0.007478</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Site  Internal Distance  External Distance  \\\n",
+       "42                           FR-OHP                 30                900   \n",
+       "78                           SP-MAJ                 30                900   \n",
+       "86  Tapajos KM67 Mature Forest site                 30                900   \n",
+       "76                           SE-Svb                 30                900   \n",
+       "31                           FI-Hyy                 30                900   \n",
+       "..                              ...                ...                ...   \n",
+       "95                           US-LIN                 30                900   \n",
+       "11                      CHINA-AGR 1                 30                900   \n",
+       "65                             LOBE                 30                900   \n",
+       "4                              BASP                 30                900   \n",
+       "19                       DE-Geb New                 30                900   \n",
+       "\n",
+       "    RAW Score  \n",
+       "42  39.387893  \n",
+       "78  14.889555  \n",
+       "86   8.071101  \n",
+       "76   5.467443  \n",
+       "31   5.167612  \n",
+       "..        ...  \n",
+       "95   0.022159  \n",
+       "11   0.016297  \n",
+       "65   0.015034  \n",
+       "4    0.010219  \n",
+       "19   0.007478  \n",
+       "\n",
+       "[101 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_Roman_30_900_RAW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Site</th>\n",
+       "      <th>Internal Distance</th>\n",
+       "      <th>External Distance</th>\n",
+       "      <th>RAW Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Dahara (Senegal)</td>\n",
+       "      <td>100</td>\n",
+       "      <td>900</td>\n",
+       "      <td>63.887256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>SW-PYN</td>\n",
+       "      <td>100</td>\n",
+       "      <td>900</td>\n",
+       "      <td>16.466925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ATGE</td>\n",
+       "      <td>100</td>\n",
+       "      <td>900</td>\n",
+       "      <td>9.702866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>FR-OHP</td>\n",
+       "      <td>100</td>\n",
+       "      <td>900</td>\n",
+       "      <td>8.163248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AT-Mmg</td>\n",
+       "      <td>100</td>\n",
+       "      <td>900</td>\n",
+       "      <td>5.195374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>CHINA-AGR 1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>900</td>\n",
+       "      <td>0.053727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BASP</td>\n",
+       "      <td>100</td>\n",
+       "      <td>900</td>\n",
+       "      <td>0.050400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>US-LIN</td>\n",
+       "      <td>100</td>\n",
+       "      <td>900</td>\n",
+       "      <td>0.049519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>DE-SEL</td>\n",
+       "      <td>100</td>\n",
+       "      <td>900</td>\n",
+       "      <td>0.032143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>DE-Geb New</td>\n",
+       "      <td>100</td>\n",
+       "      <td>900</td>\n",
+       "      <td>0.009041</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Site  Internal Distance  External Distance  RAW Score\n",
+       "16  Dahara (Senegal)                100                900  63.887256\n",
+       "84            SW-PYN                100                900  16.466925\n",
+       "0               ATGE                100                900   9.702866\n",
+       "42            FR-OHP                100                900   8.163248\n",
+       "3             AT-Mmg                100                900   5.195374\n",
+       "..               ...                ...                ...        ...\n",
+       "11       CHINA-AGR 1                100                900   0.053727\n",
+       "4               BASP                100                900   0.050400\n",
+       "95            US-LIN                100                900   0.049519\n",
+       "27            DE-SEL                100                900   0.032143\n",
+       "19        DE-Geb New                100                900   0.009041\n",
+       "\n",
+       "[101 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_Roman_100_900_RAW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_Roman_30_600_RAW.to_csv(cwd_Images_Results + \"\\\\RAW 30m 600m.csv\", index = False)\n",
+    "df_Roman_30_600_ST.to_csv(cwd_Images_Results + \"\\\\ST 30m 600m.csv\", index = False)\n",
+    "df_Roman_30_900_RAW.to_csv(cwd_Images_Results + \"\\\\RAW 30m 900m.csv\", index = False)\n",
+    "df_Roman_30_900_ST.to_csv(cwd_Images_Results + \"\\\\ST 30m 900m.csv\", index = False)\n",
+    "df_Roman_100_600_RAW.to_csv(cwd_Images_Results + \"\\\\RAW 100m 600m.csv\", index = False)\n",
+    "df_Roman_100_600_ST.to_csv(cwd_Images_Results + \"\\\\ST 100m 600m.csv\", index = False)\n",
+    "df_Roman_100_900_RAW.to_csv(cwd_Images_Results + \"\\\\RAW 100m 900m.csv\", index = False)\n",
+    "df_Roman_100_900_ST.to_csv(cwd_Images_Results + \"\\\\ST 100m 900m.csv\", index = False)"
    ]
   },
   {
